mdapioutput/objects/DataSubscription__c.object
<CustomObject>
    <description>Subscription For Data Connection</description>
    <label>Data Subscription</label>
    <nameField>
        <displayFormat>SN-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>DealershipOrganisation_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealership Organisation</label>
        <referenceTo>Dealership__c</referenceTo>
        <relationshipLabel>Data Subscriptions</relationshipLabel>
        <relationshipName>Data_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DomainName__c</fullName>
        <label>Domain Name</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Inbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoginUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Login User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgganizationId__c</fullName>
        <externalId>true</externalId>
        <label>Orgganization Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outbound</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>